2010-04-18  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
	
	* include/dlvhex/MLPSolver.hpp: Fixed stats printing information.

2010-04-16  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Optimize instantiation information: store it on ogatoms, delete MFlag.
	* include/dlvhex/OrdinaryAtomTable.hpp: Likewise.
	* include/dlvhex/Atoms.hpp: Likewise.
	* include/dlvhex/ID.hpp: Likewise.
	* include/dlvhex/Module.hpp: Likewise.
	* include/dlvhex/Table.hpp: Likewise.

2010-04-15  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/Atoms.hpp: Store actual module name on the module atom.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* src/dlvhex/HexGrammarPTToASTConverter.cpp: Likewise.

	* include/dlvhex/MLPSolver.hpp: Store the same rule only once.

	* include/dlvhex/RuleTable.hpp: Adding hashed index to the RuleTable.

2010-04-13  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/gen.sh: Adding diamond and random topology.
	* generator/Module.cpp: Likewise.
	* generator/makefile: Likewise.

	* include/dlvhex/MLPSolver.hpp: Use registry for solve() rather than ctx.

	* include/dlvhex/Logger.hpp: Printing additional statistical information.
	* include/dlvhex/MLPSolver.hpp: Likewise.
	* generator/gen.sh: Likewise.

2010-04-12  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* generator/gen.sh: Implement a more general script to generate examples.

	* generator/Module.cpp: Generate example for line, star, and ring topology.
	* generator/makefile: Likewise.

2010-04-11  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>

	* include/dlvhex/MLPSolver.hpp: Optimization on ASPSolver object and printing information.
	* src/dlvhex/dlvhex.cpp: Likewise.
	* src/dlvhex/State.cpp: Likewise.

	* examples/module-Complex.mlp: Adding an example for a more complex module call.

2010-04-06  Tri Kurniawan Wijaya  <trikurniawanwijaya@gmail.com>
